[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.10.0",
    "click==8.2.1",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic>=2.11.7",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.43",
    "starlette==0.47.3",
    "uvicorn==0.35.0",
]
