[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "anyio==4.10.0",
    "click==8.2.1",
    "h11==0.16.0",
    "idna==3.10",
    "lagom>=2.7.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pyventus>=0.7.1",
    "requests>=2.32.5",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.43",
    "starlette==0.47.3",
    "typing-extensions>=4.15.0",
    "tzlocal>=5.3.1",
    "uvicorn==0.35.0",
    "websockets>=15.0.1",
]
